[tool.poetry]
name = "snmp-spy"
version = "0.1.0"
description = "A SNMP service that records when it last sent a response and the ability to change the values for each OID"
authors = ["Martin Storgaard <martin@storgaarddieu.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
mypy = "^0.971"
pylint = "^2.14.5"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
