[tool.poetry]
name = "snmp_spy"
version = "0.1.0"
description = "A SNMP service that records when it last sent a response and the ability to change the values for each OID"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/mastdi/snmp-spy/"
authors = ["Martin Storgaard Dieu <martin@storgaarddieu.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
pydantic = "^1.9.2"
toml = "^0.10.2"
SQLAlchemy = {extras = ["mypy", "asyncio", "aiosqlite"], version = "^1.4.40"}
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
mypy = "^0.971"
pylint = "^2.14.5"
pre-commit = "^2.20.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
requests = "^2.28.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
sqlalchemy-stubs = "^0.4"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "features.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
